# todoer-api

./: Cargo.toml  Makefile  \  schema.rs  test.sql  todo
compose/: docker-compose.dev-database.yml
migrations/2024-04-15-151014_add_users/: up.sql
migrations/2024-04-16-123926_add_modified_at_to_user/: down.sql  up.sql
migrations/2024-04-16-182316_todotask/: down.sql  up.sql
migrations/2024-04-16-182322_todolist/: down.sql  up.sql
migrations/2024-05-03-102003_add_login_session_field_to_users_table/: up.sql
src/: config.rs  constants.rs  error.rs  main.rs  schema.rs  scopes.rs  secret.key
src/docs/: mod.rs  todo_list_docs.rs  todo_task_docs.rs
src/middleware/: auth_middleware.rs  mod.rs  verify_auth.rs
src/models/: dashboard.rs  login_history.rs  mod.rs  response.rs  task.rs  todo_list.rs  todo_task.rs  user.rs  user_token.rs
src/models/db/: mod.rs  todo_list.rs  todo_task.rs
src/models/dto/: mod.rs  todo_list.rs  todo_task.rs  user.rs
src/models/utils/: tailored_response.rs
src/routes/: hello.rs  todo_list.rs  todo_task.rs  user.rs
src/service/: mod.rs  todo_list_service.rs  todo_task_service.rs  user_service.rs
src/service/todo_list/: todo_list_service.rs
src/service/todo_task/: todo_task_service.rs
src/service/user/: user_service.rs
src/utils/: config.rs  database_connection.rs  mod.rs  token_utils.rs
src/utils/database/: connection.rs
