[package]
name = "todoer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
