[package]
name = "todoer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
futures = "0.3"
jsonwebtoken = "9.3.0"
actix-jwt-auth-middleware = "0.5.0"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
apistos = { version = "0.2.3", features = ["extras", "qs_query"] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }